css fix for chrome scrollbars

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,6 +51,7 @@ body {
   margin: 0;
   padding: 0;
   width: 100vw;
+  max-width: 100%;
 }
 
 a {
